Fixed BG issue on mobile

--- a/mobile/style-mob.css
+++ b/mobile/style-mob.css
@@ -1,3 +1,13 @@
+
+html {
+    background: url(resources/bg-mob.gif) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+
 body {
     font-family: "Roboto Mono", sans-serif;
     font-size: 22px;
